# DJICHALLENGE2016

./: README.md  log.txt  mylaunch.launch  nv_cam_wz.cpp  readme.md
src/: src.kdev4
src/.kdev4/: src.kdev4
src/dji_sdk/: CMakeLists.txt
src/dji_sdk/include/dji_sdk/: dji_drone.h  dji_sdk.h
src/dji_sdk/launch/: sdk_manifold.launch
src/dji_sdk/msg/: Reldist.msg
src/dji_sdk_demo_mine/: CMakeLists.txt
src/dji_sdk_demo_mine/launch/: dji_sdk_client.launch
src/dji_sdk_demo_mine/src/: .kdev_include_paths  client.cpp
src/dji_sdk_read_cam/: CMakeLists.txt  Reldist.msg  ShuoMing  package.xml
src/dji_sdk_read_cam/include/AprilTags/: .kdev_include_paths  apriltagdetector.h
src/dji_sdk_read_cam/src/: .kdev_include_paths  apriltagdetector.cpp  nv_cam.cpp
src/dji_sdk_read_cam/src/AprilTags/: TagDetection.cc  TagDetector.cc  mathUtil.cc
